# alkomp

./: .gitignore  Cargo.toml  LICENSE  README.md
py/: Cargo.toml  README.md  setup.py
py/src/: lib.rs
py/tests/: test.py
src/: device.rs  glslhelper.rs  lib.rs
tests/: compute.rs  gpu.rs  ndarray.rs
