[package]
name = "alkomp"
version = "0.1.0"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "1de388afacee"}
futures = "*"
colored = "*"
bytemuck = "*"
shaderc = { version = "0.6.2", optional = true}
ndarray = {version = "*", features = []}
